[package]
name = "todo"
version = "0.0.0"
publish = false

[dependencies]
elephantry = { version = "0.6", features = ["rocket"] }
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
parking_lot = { version = "0.10", features = ["nightly"] }
rand = "0.7"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = ["tera_templates", "databases", "serve"]
