[package]
name = "todo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
elephantry = { version = "2.1", features = ["rocket"] }
rocket = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = ["tera_templates", "databases", "serve"]

[workspace.metadata.local-install]
elephantry-cli = "2.0"
