[package]
name = "todo"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
elephantry = { version = "4.0", features = ["rocket"] }
rocket = "0.5"

[dev-dependencies]
parking_lot = "0.12"
rand = "0.8"

[dependencies.rocket_sync_db_pools]
version = "0.1"

[dependencies.rocket_dyn_templates]
version = "0.1"
features = ["tera"]

[workspace.metadata.local-install]
elephantry-cli = "3.0"
